--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
     <link rel="preload" href="https://fonts.googleapis.com">
     <link rel="preload" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@200;300&family=Raleway:wght@100;200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@200;300&family=Raleway:wght@100;200;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>
