--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,6 @@
     <link rel="preload" href="https://fonts.googleapis.com">
     <link rel="preload" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@200;300&family=Raleway:wght@100;200;700&display=swap" rel="stylesheet">
-    
 
     <title>Luis Krötz</title>
 
@@ -60,55 +59,7 @@
 
     <link rel="canonical" href="https://luiskr.com"/>
 
-    <style>
-      .hdn {
-          border: 0;
-          clip: rect(0 0 0 0);
-          height: 1px;
-          margin: -1px;
-          overflow: hidden;
-          padding: 0;
-          position: absolute;
-          width: 1px;
-      }
-      .hdn.focusable:active,
-      .hdn.focusable:focus {
-          clip: auto;
-          height: auto;
-          margin: 0;
-          overflow: visible;
-          position: static;
-          width: auto;
-      }
-      body {
-          background-color: #000;
-          color: #fff;
-          max-width: 100%;
-      }
-      .loader {
-          max-width: 100%;
-          width: 100vw;
-          text-align: center;
-          position: fixed;
-          transform: translate(-50%, -50%);
-          top: 50%;
-          left: 50%;
-      }
-      .loader p {
-          font-family: "Montserrat+Alternates", sans-serif;
-          -webkit-font-smoothing: antialiased;
-          -moz-osx-font-smoothing: grayscale;
-          font-weight: 300;
-          letter-spacing: 0.0625rem;
-          margin: 0;
-          font-size: 1.5rem;
-          text-transform: uppercase;
-      }
-      .loader video {
-          object-fit: contain;
-          filter: invert(1);
-      }
-    </style>
+    <style>.hdn{border:0;clip:rect(0 0 0 0);height:1px;margin:-1px;overflow:hidden;padding:0;position:absolute;width:1px}.hdn.focusable:active,.hdn.focusable:focus{clip:auto;height:auto;margin:0;overflow:visible;position:static;width:auto}body{background-color:#000;color:#fff;max-width:100%}.loader{max-width:100%;width:100vw;text-align:center;position:fixed;transform:translate(-50%,-50%);top:50%;left:50%}.loader p{font-family:"Montserrat+Alternates",sans-serif;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;font-weight:300;letter-spacing:.0625rem;margin:0;font-size:1.5rem;text-transform:uppercase}.loader video{object-fit:contain;filter:invert(1)}</style>
 
     <script type="application/ld+json">
         {
