--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,14 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v4">
     <link rel="manifest" href="/site.webmanifest?v4">
     <link rel="mask-icon" href="/safari-pinned-tab.svg?v4" color="#303030">
-    <meta name="msapplication-TileColor" content="#000">
-    <meta name="theme-color" content="#000">
+    <meta name="msapplication-TileColor" content="#262626">
+    <meta name="theme-color" content="#262626">
 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="luiskr.com">
-    <meta name="application-name" content="luiskr.com">
-    <meta name="msapplication-TileColor" content="#000">
+    <meta name="apple-mobile-web-app-title" content="Luis Krötz">
+    <meta name="application-name" content="Luis Krötz">
+    <meta name="msapplication-TileColor" content="#262626">
     <meta property="fb:app_id" content="974280449654426" />
 
     <link rel="preconnect" href="https://storage.googleapis.com">
@@ -52,10 +52,10 @@
     <meta name="twitter:creator"          content="@LuisKr1906">
     <meta name="twitter:card"             content="summary_large_image"/>
     <meta property="og:type"              content="website"/>
-    <meta property="og:site_name"         content="luiskr.com"/>
+    <meta property="og:site_name"         content="Luis Krötz"/>
     <meta name="DC.Format"                content="text/html">
     <meta name="DC.Language"              content="en_us">
-    <meta name="DC.Publisher"             content="luiskr.com" >
+    <meta name="DC.Publisher"             content="Luis Krötz" >
 
     <link rel="canonical" href="https://luiskr.com"/>
 
@@ -68,7 +68,7 @@
             "@id":          "Page",
             "legalName":    "Jacson Luis Krötz",
             "url":          "https://luiskr.com",
-            "name":             "luiskr.com",
+            "name":             "Luis Krötz",
             "image":            "https://luiskr.com/share.png",
             "logo":             "https://luiskr.com/favicon/android-chrome-512x512.png"
         }
@@ -87,13 +87,13 @@
               "https://medium.com/@luis.krotz",
               "https://www.youtube.com/channel/UCtjY-xreMd_JF7ovY-paRAw?view_as=subscriber"
             ],
-            "name":             "luiskr.com",
+            "name":             "Luis Krötz",
             "image":            "https://luiskr.com/share.png"
         }
     </script>
   </head>
   <body data-no-snippet>
-    <h1 class="hdn">Luis Krötz | Front-End Developer with passion for UI/UX, JS, CSS and Performance, focused on creating beautiful experiences.</h1>
+    <h1 class="hdn">Luis Krötz | Front-End Developer with a passion for UI/UX, JS, CSS and Performance, focused on creating beautiful experiences.</h1>
 
     <div id="app">
       <div class="loader">
