--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
 
     <link rel="canonical" href="https://luiskr.com"/>
 
-    <style>.hdn{border:0;clip:rect(0 0 0 0);height:1px;margin:-1px;overflow:hidden;padding:0;position:absolute;width:1px}.hdn.focusable:active,.hdn.focusable:focus{clip:auto;height:auto;margin:0;overflow:visible;position:static;width:auto}body{background-color:#000;color:#fff;max-width:100%}.loader{max-width:100%;width:100vw;text-align:center;position:fixed;transform:translate(-50%,-50%);top:50%;left:50%}.loader p{font-family:"Montserrat+Alternates",sans-serif;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;font-weight:300;letter-spacing:.0625rem;margin:0;font-size:1.5rem;text-transform:uppercase}.loader video{object-fit:contain;filter:invert(1)}</style>
+    <style>.hdn{border:0;clip:rect(0 0 0 0);height:1px;margin:-1px;overflow:hidden;padding:0;position:absolute;width:1px}.hdn.focusable:active,.hdn.focusable:focus{clip:auto;height:auto;margin:0;overflow:visible;position:static;width:auto}body{background-color:#fff;color:#262626;max-width:100%}.loader{max-width:100%;width:100vw;text-align:center;position:fixed;transform:translate(-50%,-50%);top:50%;left:50%}.loader p{font-family:"Montserrat+Alternates",sans-serif;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;font-weight:300;letter-spacing:.0625rem;margin:0;font-size:1.5rem;text-transform:uppercase}.loader video{object-fit:contain;}</style>
 
     <script type="application/ld+json">
         {
