--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <link rel="preconnect" href="https://storage.googleapis.com">
     <link rel="preload" href="https://fonts.googleapis.com">
     <link rel="preload" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@200;300&family=Raleway:wght@100;200;700&display=swap" rel="stylesheet">
+    <style>@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@200;300&family=Raleway:wght@200;300;400;700&display=swap');</style>
 
     <title>Luis Krötz</title>
 
