--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,11 @@
     <link rel="preload" href="https://fonts.gstatic.com" crossorigin>
     <style>@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@200;300&family=Raleway:wght@200;300;400;700&display=swap');</style>
 
+
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Press+Start+2P&family=VT323&display=swap');
+      </style>
+
     <title>Luis Krötz</title>
 
     <meta property="og:title"             content="Luis Krötz"/>
