--- a/public/index.html
+++ b/public/index.html
@@ -23,13 +23,11 @@
     <link rel="preconnect" href="https://storage.googleapis.com">
     <link rel="preload" href="https://fonts.googleapis.com">
     <link rel="preload" href="https://fonts.gstatic.com" crossorigin>
-    <style>@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@200;300&family=Raleway:wght@200;300;400;700&display=swap');</style>
+    <style>@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@200;300&family=Raleway:wght@200;300;400;700&family=Black+Ops+One&display=swap');</style>
 
 
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Press+Start+2P&family=VT323&display=swap');
-      </style>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <title>Luis Krötz</title>
 
     <meta property="og:title"             content="Luis Krötz"/>
@@ -108,6 +106,35 @@
         <p>Loading</p>
       </div>
     </div>
+
+
+    <script>
+      var isOpera = (!!window.opr && !!opr.addons) || !!window.opera || navigator.userAgent.indexOf(' OPR/') >= 0;
+      var isFirefox = typeof InstallTrigger !== 'undefined';
+      var isSafari = /constructor/i.test(window.HTMLElement) || (function (p) { return p.toString() === "[object SafariRemoteNotification]"; })(!window['safari'] || (typeof safari !== 'undefined' && safari.pushNotification));
+      var isIE = /*@cc_on!@*/false || !!document.documentMode;
+      var isEdge = !isIE && !!window.StyleMedia;
+      var isChrome = !!window.chrome && (!!window.chrome.webstore || !!window.chrome.runtime) || /Chrome/.test(navigator.userAgent) && /Google Inc/.test(navigator.vendor);
+      var isBlink = (isChrome || isOpera) && !!window.CSS;
+      var browser = isChrome ? 'chrome' : isSafari ? 'safari' : isFirefox ? 'firefox' : isEdge ? 'edge' : isOpera ? 'opera' : isIE ? 'ie': isBlink ? 'blink' : 'unknown';
+      if (isIE || isEdge) alert('Incompatible browser detected. Your browser don\'t use modern web standards. Update your browser to enjoy our content.');
+      document.documentElement.className += ' is_' + browser;
+
+      function getMobileOperatingSystem() {
+          var userAgent = navigator.userAgent || navigator.vendor || window.opera;
+  
+          if (/android/i.test(userAgent)) {
+              return " system-android";
+          }
+  
+          if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
+              return " system_iOS";
+          }
+  
+          return " system-other";
+      }
+      document.documentElement.className += getMobileOperatingSystem();
+    </script>
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-CRKMT2NQLM"></script>
     <script>
