--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
 
     <meta property="fb:app_id" content="974280449654426" />
 
-    <link rel="preconnect" href="https://storage.googleapis.com" crossorigin>
+    <link rel="preconnect" href="https://storage.googleapis.com">
+    <link rel="preconnect" href="https://www.googletagmanager.com">
 
     <link rel="preload" href="https://fonts.gstatic.com/s/blackopsone/v19/qWcsB6-ypo7xBdr6Xshe96H3aDXbtxsis4IxXw.woff2" as="font" type="font/woff2" crossorigin/>
     <link rel="preload" href="https://fonts.gstatic.com/s/blackopsone/v19/qWcsB6-ypo7xBdr6Xshe96H3aDvbtxsis4I.woff2" as="font" type="font/woff2" crossorigin/>
